--- a/.github/workflows/build-and-test-rpm.yml
+++ b/.github/workflows/build-and-test-rpm.yml
@@ -59,12 +59,16 @@ jobs:
           mkdir -p $HOME/rpmbuild/SOURCES
           mkdir -p $HOME/rpmbuild/SPECS
           mkdir -p /opt/ezfirewall/src/
+          mkdir -p /opt/ezfirewall/bin/
+          mkdir -p /opt/ezfirewall/templates/
           mkdir -p /opt/ezfirewall/sources/
           mkdir -p /opt/ezfirewall/rules/
 
       - name: Copy files to include in the build
         run: |
           cp -r ${GITHUB_WORKSPACE}/src/* /opt/ezfirewall/src/
+          cp -r ${GITHUB_WORKSPACE}/bin/* /opt/ezfirewall/bin/
+          cp -r ${GITHUB_WORKSPACE}/templates/* /opt/ezfirewall/templates/
           cp ${GITHUB_WORKSPACE}/ezfirewall.py /opt/ezfirewall/ezfirewall.py
           cp ${GITHUB_WORKSPACE}/version /opt/ezfirewall/version
 
