--- a/.github/workflows/build-and-test-rpm.yml
+++ b/.github/workflows/build-and-test-rpm.yml
@@ -59,6 +59,7 @@ jobs:
           mkdir -p $HOME/rpmbuild/SOURCES
           mkdir -p $HOME/rpmbuild/SPECS
           mkdir -p /opt/ezfirewall/src/
+          mkdir -p /opt/ezfirewall/www/
           mkdir -p /opt/ezfirewall/bin/
           mkdir -p /opt/ezfirewall/templates/
           mkdir -p /opt/ezfirewall/sources/
@@ -67,6 +68,7 @@ jobs:
       - name: Copy files to include in the build
         run: |
           cp -r ${GITHUB_WORKSPACE}/src/* /opt/ezfirewall/src/
+          cp -r ${GITHUB_WORKSPACE}/www/* /opt/ezfirewall/www/
           cp -r ${GITHUB_WORKSPACE}/bin/* /opt/ezfirewall/bin/
           cp -r ${GITHUB_WORKSPACE}/templates/* /opt/ezfirewall/templates/
           cp ${GITHUB_WORKSPACE}/ezfirewall.py /opt/ezfirewall/ezfirewall.py
