--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,7 +187,8 @@ jobs:
           release_name: ${{ env.VERSION }}
           body: |
             **Changes**
-            - Added web interface dashboard
+              - Added support for IPv6
+              - Various UI fixes and improvements
           draft: false
           prerelease: false
 
