--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,6 +187,7 @@ jobs:
           release_name: ${{ env.VERSION }}
           body: |
             **Changes**
+              - Performance improvements
               - Various UI fixes and improvements
           draft: false
           prerelease: false
@@ -206,9 +207,13 @@ jobs:
         run: | 
           curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -F "files=@$HOME/assets/ezfirewall_${{ env.VERSION }}_all.deb" https://packages.repomanager.net/api/v2/snapshot/247/upload
           curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -F "files=@$HOME/assets/ezfirewall-${{ env.VERSION }}.noarch.rpm" https://packages.repomanager.net/api/v2/snapshot/248/upload
+          curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -F "files=@$HOME/assets/ezfirewall-${{ env.VERSION }}.noarch.rpm" https://packages.repomanager.net/api/v2/snapshot/550/upload
+          curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -F "files=@$HOME/assets/ezfirewall-${{ env.VERSION }}.noarch.rpm" https://packages.repomanager.net/api/v2/snapshot/551/upload
 
       # Rebuild repositories metadata
       - name: Rebuild repositories
         run: |
           curl --fail-with-body -X PUT -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -d '{"gpgSign":"true"}' https://packages.repomanager.net/api/v2/snapshot/247/rebuild
           curl --fail-with-body -X PUT -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -d '{"gpgSign":"true"}' https://packages.repomanager.net/api/v2/snapshot/248/rebuild
+          curl --fail-with-body -X PUT -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -d '{"gpgSign":"true"}' https://packages.repomanager.net/api/v2/snapshot/550/rebuild
+          curl --fail-with-body -X PUT -H "Authorization: Bearer ${{ secrets.REPOSITORY_TOKEN }}" -d '{"gpgSign":"true"}' https://packages.repomanager.net/api/v2/snapshot/551/rebuild
