--- a/.github/workflows/build-and-test-deb.yml
+++ b/.github/workflows/build-and-test-deb.yml
@@ -133,6 +133,38 @@ jobs:
         run: python3 /opt/ezfirewall/ezfirewall.py --help
 
 
+  # Try to install package on Debian 13
+  install-debian-13:
+    name: Install (Debian 13)
+    needs:
+      build-deb
+    runs-on: ubuntu-latest
+    container:
+      image: debian:13
+      options: --user root
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get ezfirewall version
+        run: echo "VERSION=$(cat ${GITHUB_WORKSPACE}/version)" >> $GITHUB_ENV
+ 
+      # Download builded deb package artifact
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ezfirewall-test-build_${{ env.VERSION }}_all.deb
+
+      - name: Install package
+        run: |
+          apt-get update -y
+          apt-get install -y ./ezfirewall-test-build_${{ env.VERSION }}_all.deb
+
+      # Tests some params
+      - name: "Run test: print help"
+        run: python3 /opt/ezfirewall/ezfirewall.py --help
+
+
   # Try to install package on Ubuntu 22.04
   install-ubuntu-2204:
     name: Install (Ubuntu 22.04)
