--- a/.github/workflows/packaging/deb/control
+++ b/.github/workflows/packaging/deb/control
@@ -3,7 +3,7 @@ Version: __VERSION__
 Section: main
 Priority: optional
 Architecture: all
-Depends: nftables, python3, python3-colorama, python3-yaml, python3-tabulate, python3-dateutil
+Depends: nftables, python3, python3-colorama, python3-yaml, python3-tabulate, python3-dateutil, python3-nftables
 Maintainer: Ludovic <repomanager@protonmail.com>
 Description: Ezfirewall is a simple nftables firewall script written in Python. It allows you to easily manage your firewall rules with YAML files.
 Homepage: https://github.com/lbr38/ezfirewall
