--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,7 +187,7 @@ jobs:
           release_name: ${{ env.VERSION }}
           body: |
             **Changes**
-              - Added charts displaying drops over the last 15 days
+              - Now using libnftables lib to interact with nftables
               - Various UI fixes and improvements
           draft: false
           prerelease: false
